Uploaded the first post about UAT

--- a/source_code/blog1_UAT.ipynb
+++ b/source_code/blog1_UAT.ipynb
@@ -316,12 +316,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a867b28a",
+   "cell_type": "markdown",
+   "id": "c16f6776",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Notes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eeae58c5",
+   "metadata": {},
+   "source": [
+    "The source code above is developed with coding assistant :)"
+   ]
   }
  ],
  "metadata": {
